# export-from-db-to-object-store

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/explanation/: architecture.md  concurrency-model.md  design-decisions.md  idempotency-and-state.md  limits.md  streaming-pipeline.md
docs/how-to/: enable-encryption.md  handle-failures.md  instrument-tracing.md  mask-pii.md  partition-hive-style.md  shard-large-tables.md  tune-performance.md  write-uploader-plugin.md
docs/reference/: bigquery-unload.md  encryption-options.md  exceptions.md  incremental-config.md  operator.md  parquet-options.md  redshift-unload.md  result-shape.md  retry-options.md  shard-options.md  snowflake-unload.md  unload-strategy-protocol.md  uploader-protocol.md
docs/tutorials/: 01-quickstart.md  02-incremental.md  03-native-unload.md
examples/: example_basic.py  example_dag.py  example_hive_partitioned.py  example_incremental_with_skip.py  example_native_unload_snowflake.py  example_pii_transform.py  example_sharded_postgres_to_gcs.py
src/airflow_export_to_object_store/: __init__.py  db_adapter.py  encryption.py  incremental.py  manifest.py  metrics.py  operator.py  options.py  parquet_io.py  parquet_validator.py  retry.py  shard_task.py  templating.py  tracing.py  utils.py
src/airflow_export_to_object_store/unload/: __init__.py  base.py  bigquery.py  redshift.py  snowflake.py
src/airflow_export_to_object_store/uploaders/: __init__.py  azure.py  base.py  gcs.py  s3.py
tests/: conftest_e2e.py  test_azure_upload.py  test_encryption_and_tags.py  test_gcs_upload.py  test_incremental.py  test_manifest.py  test_metrics.py  test_operator_e2e.py  test_options.py  test_parquet_validator.py  test_plugin_uploaders.py  test_retry.py  test_s3_upload_integration.py  test_shard_cancel.py  test_shard_timeout.py  test_shard_worker.py  test_skip_if_exists.py  test_templating.py  test_tracing.py  test_transform_fn.py  test_unload_bigquery.py  test_unload_redshift.py  test_unload_snowflake.py  test_uploaders.py  test_utils.py
